Mon Jan 23 17:03:09 UTC 2006  Nishanth Shankaran  <nshankar@dre.vanderbilt.edu>

        * RACE/Controller/Component/Controller_svnt_export.h:
        * RACE/Controller/Component/Controller_stub_export.h:
        * RACE/Controller/Component/Controller_exec_export.h:
        * RACE/Controller/Component/Controller_exec.h:
        * RACE/Controller/Component/Controller_exec.cpp:
        * RACE/Controller/Component/Controller.mpc:
        * RACE/Controller/Component/Controller.idl:
        * RACE/Controller/Component/Controller.cidl:

        Added IDL, CIDL, and MPC files for the RACE controller along with a
        dummy implementation of the controller.

Mon Jan 23 15:11:40 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/TargetManager/TargetManager.mpc

          Cleaned up the MPC file, fixed a linking error on OS X.

Sat Jan 21 21:54:59 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/SizeTypeCalculator.cpp:

          Fixed a bug in size type calculation of nested structs and unions.
          Thanks to Sandro Santos Andrade <sandros@dcc.ufba.br> for
          reporting the problem.

Sat Jan 21 20:27:13 UTC 2006  Nilabja R  <nilabjar@dre.vanderbilt.edu>

        * DAnCE/TargetManager/TargetManager.idl:
        * DAnCE/TargetManager/TargetManager.mpc:
        * DAnCE/TargetManager/TargetManagerExt.idl:
          Added this file to include the facet for RACE Controller
        * DAnCE/TargetManager/TargetManager_exec.h:
        * DAnCE/TargetManager/TargetManager_exec.cpp:
          Added implementation for the facet serving the RACE Controller.


Sat Jan 21 02:04:15 UTC 2006  Nilabja R  <nilabjar@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
          Removed trailing whitespaces and tabs

        * DAnCE/NodeManager/BaseMonitor.h:
        * DAnCE/NodeManager/CIAO_Monitor.h:
        * DAnCE/NodeManager/CIAO_Monitor.cpp:
        * DAnCE/NodeManager/MonitorCB.h: